0.3
  * major refactoring of block handling to better compartmentalize the code
  * blocks in a stack being dragged should be on top of everything else
  * refactoring of input for Android (Sam Parkinson)
0.4
  * write SVG generator
  * auto-guestimate block width (need to set label name before creating artwork)
  * add splash-screen animation (Sam Parkinson)
  * fixed collapse bug which manifests itself when loading custom stacks
  * use ellipsis on action and do labels (including do blocks in palette)
  * fixed layout problem in boxes palette
  * fixed regression in loading macros (NaN)
  * set proper z-order for palettes, blocks, turtles, and canvas (Sam Parkinson)
  * fixed problem with expanding booleans not docking to parents
  * fixed race condition with collapsibles
  * fixed problem with start block turtle decoration positioning
  * removed event handler after load so that when you change the image
    associted a media block, other media blocks don't also change

TODO:
  * music blocks plugin
  * save errors
  * display rubrics
  * more efficient until and while?
  * save to javascript
  * RTL support
  * zoom and scroll?
  * use graphical error messages
  * make expand an array, one element for each arg or slot
  * user-defined block types (trivial with factory)
  * three-arg flow blocks (trivial with factory)
  * three-arg arg blocks (trivial with factory)
  * artwork beautification?
  * try to detect difference between unknown flow and arg blocks
  * button block (a stack that is run when you click on a button)
    - two args: artwork for the button; action name to take
  * maybe we want to add local variables? (e.g., boxes only defined inside an action)
  * pass argments to actions? (and arg blocks to reference them)?
  * event blocks?

KNOWN BUGS:
  * sample projects cannot be shown on Android
  * don't save full-sized bitmap to session
  * find a scalable approach to drawing on the canvas
  * not all blocks highlight when using step-by-step mode